[gd_scene load_steps=3 format=3 uid="uid://bbd5yguc57ukr"]

[ext_resource type="Texture2D" uid="uid://cqgn3ve0hqaj7" path="res://sprites/buildings/tower-wooden-1.png" id="1_moa2q"]
[ext_resource type="Script" path="res://build_tower_menu.gd" id="2_ls4jj"]

[node name="PopupMenu" type="PopupMenu"]
gui_embed_subwindows = true
title = "Select a tower"
size = Vector2i(400, 234)
visible = true
hide_on_checkable_item_selection = false
allow_search = false
item_count = 5
item_0/text = "archer tower | atk=50 | wood=100"
item_0/icon = ExtResource("1_moa2q")
item_0/checkable = 2
item_0/checked = true
item_0/id = 0
item_1/text = ""
item_1/id = 1
item_1/separator = true
item_2/text = "Select tower"
item_2/id = 2
item_2/disabled = true
item_3/text = ""
item_3/id = 4
item_3/separator = true
item_4/text = "Cancel"
item_4/id = 3
script = ExtResource("2_ls4jj")

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="id_pressed" from="." to="." method="_on_id_pressed"]
[connection signal="popup_hide" from="." to="." method="_on_popup_hide"]
